Jira-ID: CRNT-29700 Horizontal scrollbar was missing for MTA view. Fixed this.
git-svn-id: https://svn.csa.sungard.com/repos/ipp2/product/trunk/stardust/ui.web@66232 8100b5e0-4d52-466c-ae9c-bdeccbdeaf6b

--- a/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
+++ b/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
@@ -15,6 +15,12 @@
 	line-height: 1.5;
 } */
 
+.nativeHtmlViewPanel {
+	width: 100%;
+	overflow: auto;
+	margin: 10px;
+}
+ 
 label {
 	color: #4d4d4d;
 	margin-right: 10px;
